# claude-experiment

./: .gitignore  CLAUDE.md  README.md
.claude/: routing-keywords.json  settings.json
.claude/agents/: build-engineer.md  codex-debugger.md  data-analyst.md  device-operator.md  experiment-runner.md  gemini-explore.md  script-reviewer.md  viz-reviewer.md
.claude/hooks/: agent-router.py  error-to-codex.py  log-cli-tools.py  reproducibility-check.py  safety-check.py  session-end.py  session-start.py
.claude/logs/: setup-status.json
.claude/rules/: agent-routing.md  language.md  reproducibility.md  research-integrity.md  safety-hil.md  statistical-rigor.md
.claude/skills/analyze-results/: SKILL.md
.claude/skills/ask-codex/: SKILL.md
.claude/skills/ask-gemini/: SKILL.md
.claude/skills/build-experiment/: SKILL.md
.claude/skills/calibrate-device/: SKILL.md
.claude/skills/checkpoint/: SKILL.md
.claude/skills/collect-data/: SKILL.md
.claude/skills/design-experiment/: SKILL.md
.claude/skills/init-experiment/: SKILL.md
.claude/skills/lock-device/: SKILL.md
.claude/skills/review-figures/: SKILL.md
.claude/skills/review-script/: SKILL.md
.claude/skills/run-experiment/: SKILL.md
.claude/skills/sweep-experiment/: SKILL.md
.claude/skills/write-report/: SKILL.md
.claude/templates/: README.md
.claude/templates/cpp-cmake/: CMakeLists.txt
.claude/templates/cpp-cmake/_smoke/: CMakeLists.txt  main.cpp
.claude/templates/make/: Makefile
.claude/templates/make/_smoke/: main.c
.claude/templates/python-uv/: .gitignore  pyproject.toml  repro.py  viz.py
.claude/templates/rust-cargo/: Cargo.toml
.claude/templates/rust-cargo/_smoke/: Cargo.toml
.claude/templates/rust-cargo/_smoke/src/: main.rs
