# Reproducibility note (claude-experiment template):
#
# This file uses `>=` lower bounds for direct dependencies. The DETERMINISTIC
# source of truth for what versions actually get installed is `uv.lock`,
# which `uv sync` writes after resolving the dependency graph. Commit
# `uv.lock` alongside this file — it is what `repro.write_initial_metadata`
# records into every run's `sim.package_versions` and what `data-analyst`
# expects when re-running an analysis on a different machine.
#
# Pinning with `==` here instead would force every project to bump the
# template before adopting a security patch; keeping `>=` here AND committing
# `uv.lock` is the established uv workflow and gives both freshness on the
# template side and bit-for-bit reproducibility on the project side. See
# `.claude/rules/reproducibility.md` §5 (Seed policy) and §6 (Determinism).

[project]
name = "experiment"
version = "0.0.0"
description = "An experiment-coding project (claude-experiment template)."
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "matplotlib>=3.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
analysis = [
    "pandas>=2.2",
    "scipy>=1.13",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.uv]
# `package = false` keeps src/ from being installed as an importable package.
# Drivers under src/experiments/ bootstrap the import path manually
# (see .claude/agents/experiment-runner.md §3).
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
